[About] Fix some <p> being aligned further right

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,8 @@ input[type=button] {
     margin-top: 4px;
 }
 .wide {
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 .wide-top {
     margin-top: 25px;
